@@ -1104,9 +1104,10 @@ static GPtrArray *amstar_build_argv(
 	}
     }
 
-    # It is best to place command_options at the and of command line.
-    # For example '-find' option requires that it is the last option used.
-    # See: http://cdrecord.berlios.de/private/man/star/star.1.html
+    /* It is best to place command_options at the and of command line.
+     * For example '-find' option requires that it is the last option used.
+     * See: http://cdrecord.berlios.de/private/man/star/star.1.html
+     */
     for (copt = argument->command_options; copt != NULL; copt = copt->next) {
 	g_ptr_array_add(argv_ptr, stralloc((char *)copt->data));
     }
